# timetill.rs

./: .gitignore  .travis.yml  CNAME  CONTRIBUTING.md  README.md  app.vue  conferences.json  data.json  index.html  main.0251a5a0.js  main.08328142.js  main.09385f2f.css  main.0e78f9d5.js  main.0e7bc13e.js  main.0f3d0d1f.js  main.18c9a76e.js  main.1fe7781f.js  main.2b1267af.js  main.2f505816.js  main.38939785.js  main.3af1a463.js  main.40e6468d.css  main.4d5315fe.js  main.56846115.css  main.5d8ffa88.js  main.5de5fbae.js  main.5e7589db.js  main.639a8c0c.js  main.66ca6e3d.js  main.68edc078.js  main.68f64b42.js  main.6c37b8e7.js  main.6e0fe473.js  main.819eb08a.js  main.851e7661.js  main.887d6381.js  main.8cfb14bc.js  main.90b2dc91.js  main.93ec59da.js  main.940b8695.js  (+65 more)
.github/: dependabot.yml
.github/workflows/: main.yml
server/: Cargo.toml  Dockerfile  diesel.toml  docker-compose.yml
server/migrations/2019-10-28-094406_init/: down.sql  up.sql
server/src/: env.rs  error.rs  events.rs  github.rs  lib.rs  main.rs  middleware.rs  models.rs  schema.rs  sql_types.rs  users.rs
server/src/models/: event_attendees.rs  event_organisers.rs  events.rs  users.rs
src/: 404.vue  ConferenceData.ts  EventDetail.vue  EventForm.vue  EventList.vue  Home.vue  InlineUser.vue  TimeSlice.vue  app.vue  conference.vue  consts.ts  events.vue  header.vue  main.js  main.ts  time-slice.vue
