[package]
name = "server"
version = "0.1.0"
authors = ["Erin Power <xampprocky@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.1.0"
actix-rt = "0.2.5"
actix-service = "0.4.2"
actix-session = "0.2.0"
actix-web = { version = "1.0.8", features = ["ssl"] }
chrono = { version = "0.4.9", features = ["serde"] }
diesel = { version = "1.4.3", features = ["postgres", "extras"] }
diesel_derives = "1.4.1"
diesel_geometry = { version = "1.4.0", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.7.1"
failure = "0.1.6"
futures = "0.1.29"
lazy_static = "1.4.0"
log = "0.4.8"
r2d2 = "0.8.6"
r2d2_redis = "0.12.0"
redis = "0.13.0"
reqwest = "0.9.22"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"
serde_urlencoded = "0.6.1"
uuid = { version = "0.8.1", features = ["v4"] }
pulldown-cmark = "0.6.0"
snafu = "0.5.0"
